<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="8dp"
  android:orientation="vertical">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/commons_ads_status"
    android:textAllCaps="true" />

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray" />

  <TextView
    android:id="@+id/status"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/commons_ads_active" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/commons_ads_disable_temporary"
    android:textAllCaps="true" />

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray" />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/commons_ads_disable_temporary_description" />

  <Button
    android:id="@+id/watch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:enabled="false"
    android:text="@string/commons_ads_watch" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/ready"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/commons_ads_not_ready" />

    <ProgressBar
      android:id="@+id/progress"
      style="?android:attr/progressBarStyleSmall"
      android:layout_width="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

  </LinearLayout>

</LinearLayout>